# bolyai

./: .gitignore  README.md
1-resz/c++/012/: 012.layout
1-resz/c++/Ciklus/: main.cpp
1-resz/c++/GY_K/: CMakeLists.txt  main.cpp
1-resz/c++/No1/: main.cpp
1-resz/c++/No3/: No3.layout
1-resz/c++/No5/: No5.cbp  main.cpp
1-resz/c++/No6/: No6.cbp
1-resz/c++/No7_hasz_algrtms/: No7_hasz_algrtms.cbp
1-resz/c++/Rand/: Rand.layout
1-resz/c++/Szorzotala/: Szorzotala.cbp
1-resz/c++/cikls/: main.cpp
1-resz/c++/ciklusok/Ciklusgyakorlas/: CMakeLists.txt  main.cpp
1-resz/c++/ciklusok/cik_alap/: CMakeLists.txt  main.cpp
1-resz/c++/ciklusok/cikluss/: CMakeLists.txt  main.cpp
1-resz/c++/ciklusok/ellenorzo/: CMakeLists.txt  main.cpp
1-resz/c++/ciklusok/ellenozrz/: CMakeLists.txt  main.cpp
1-resz/c++/ciklusok/elmeleti/: CMakeLists.txt  main.cpp
1-resz/c++/ciklusok/elmeletinov/: CMakeLists.txt  main.cpp
1-resz/c++/ciklusok/ezujjabb/: CMakeLists.txt  main.cpp
1-resz/c++/ellgy/: ellgy.cbp  main.cpp
1-resz/c++/g_k/: CMakeLists.txt  main.cpp
1-resz/c++/gfgfgfgfgfgfg/: main.cpp
1-resz/c++/ghjgjh/: ghjgjh.cbp  ghjgjh.layout
1-resz/c++/gy3/: gy3.cbp  main.cpp
1-resz/c++/gy5/: main.cpp
1-resz/c++/gy6/: gy6.cbp
1-resz/c++/gyak_ellen/: CMakeLists.txt
1-resz/c++/gyakorlo/: gyakorlo.cbp  main.cpp
1-resz/c++/gyakorlo2/: gyakorlo2.cbp
1-resz/c++/hazi/: hazi.cbp  main.cpp
1-resz/c++/no10/: main.cpp
1-resz/c++/no11/: no11.layout
1-resz/c++/no12,ell/: main.cpp  no12,ell.cbp
1-resz/c++/no9/: main.cpp  no9.cbp
1-resz/c++/weqe/: main.cpp
(+66 files in other folders)
