cmake_minimum_required(VERSION 3.27)
project(ellenozrz)

set(CMAKE_CXX_STANDARD 17)

add_executable(ellenozrz main.cpp
        ../randomb/main.cpp
        ../randomb/main.cpp
        ../randomb/main.cpp
        ../randomb/main.cpp
        ../randomb/main.cpp
        ../randomb/main.cpp
        ../randomb/main.cpp
        ../randomb/main.cpp)
