cmake_minimum_required(VERSION 3.27)
project(ezujjabb)

set(CMAKE_CXX_STANDARD 17)

add_executable(ezujjabb main.cpp
        ../../../../Github/bolyai/1-resz/c++/ciklusok/sakktabla/main.cpp
        ../../../../Github/bolyai/1-resz/c++/ciklusok/sakktabla/main.cpp
        ../../../../Github/bolyai/1-resz/c++/ciklusok/sakktabla/main.cpp
        ../../../../Github/bolyai/1-resz/c++/ciklusok/sakktabla/main.cpp
        ../../../../Github/bolyai/1-resz/c++/ciklusok/sakktabla/main.cpp)
